--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ paginate: 20
 baseurl: /
 domain_name: 'http://yourblog-domain.com'
 google_analytics: 'UA-XXXXXXXX-X'
-gems: [jekyll-paginate, jekyll-sitemap]
+gems: [jekyll-paginate, jekyll-sitemap, jekyll-paginate]
 
 # Details for the RSS feed generator
 url:            'blog url'
