--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ highlighter: pygments
 logo: false
 paginate: 20
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
+domain_name: 'https://cursodeios.github.io'
+#google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate, jekyll-sitemap, jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Blanca Suarez'
+url:            'https://cursodeios.github.io'
+author:         'Alejandro M'
