--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name: Curso de iOS en Español
+name: Curso de iOS y Swift
 description: Curso completo de desarrollo iOS en Español
 meta_description: "Curso completo de iOS en español. Aprende a desarrollar Apps para iOS con el lenguaje de progración Swift y las APIs de iOS más utlizadas."
 # Configuration
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 logo: false
 paginate: 100
 baseurl: '/'
@@ -15,3 +15,4 @@ url: 'https://cursodeios.github.io'
 author: 'Danny Al'
 bio: 'Desarrollando Apps para iOS desde 2015, localizado en Managua, Nicaragua. He participado en varios proyectos de e-commerce, e-banking y aplicaciones de negocios hechas a la medida.'
 profile-img: '/assets/images/profile-1.jpg'
+cover: '/assets/images/site-img.png'
