Add some changes in index.

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
 name: Curso de iOS y Swift
 description: Curso completo de desarrollo iOS en Español
 meta_description: "Curso completo de iOS en español. Aprende a desarrollar Apps para iOS con el lenguaje de progración Swift y las APIs de iOS más utlizadas."
+cover: '/assets/images/cover.png'
+url: 'https://cursodeios.github.io'
+baseurl: '/'
+domain_name: 'https://cursodeios.github.io'
 # Configuration
 markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 100
-baseurl: '/'
-domain_name: 'https://cursodeios.github.io'
 #google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate, jekyll-sitemap, jekyll-paginate]
-# Details for the RSS feed generator
-url: 'https://cursodeios.github.io'
-author: 'Danny Al'
-bio: 'Desarrollando Apps para iOS desde 2015, localizado en Managua, Nicaragua. He participado en varios proyectos de e-commerce, e-banking y aplicaciones de negocios hechas a la medida.'
-profile-img: '/assets/images/profile-1.jpg'
-cover: '/assets/images/site-img.png'
+# Author
+author: 'Danny Alejandro'
+author-bio: 'Desarrollando Apps para iOS desde 2015, localizado en Managua, Nicaragua. He participado en varios proyectos de e-commerce, e-banking y aplicaciones de negocios hechas a la medida.'
+author-img: '/assets/images/danny.jpg'
+author-url: 'https://www.linkedin.com/in/dannynarvaez/'
